@@ -60,6 +60,7 @@
 34. Install cantata-dynamic to $prefix/share/cantata - as this is script is not
     intended to be run by users.
 35. Use com.googlecode.cantata instead of org.kde.cantata for DBUS service, etc.
+36. Add action icons to grouped-albums style playlists at the top level.
 
 0.9.2
 -----
